--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.0"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
